# AI-Powered-Email

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  launch.bat  launcher.py  plan.txt  pyproject.toml
.context/: ARCHITECTURE.md  CONVENTIONS.md  CURRENT_STATUS.md  DECISIONS.md  MASTER_PLAN.md  PHASE_CONTEXT.md  SETUP.md
.context/CHECKPOINTS/: 2026-02-27-phase4-complete.md
.context/PROMPTS/: code_review.md  implement_module.md
docs/plans/: 2026-02-27-phase4-cli-design.md  2026-02-27-phase4-cli-plan.md  2026-02-27-phase5-briefing-design.md  2026-02-27-phase5-briefing-plan.md  2026-02-28-schema-redesign-design.md  2026-02-28-schema-redesign-plan.md  2026-03-01-readme-design.md  2026-03-01-readme-plan.md  2026-03-02-launcher-design.md  2026-03-02-launcher-plan.md
src/: __init__.py  __main__.py
src/agent/: __init__.py  watcher.py
src/briefing/: __init__.py  generator.py  scheduler.py
src/cli/: __init__.py  commands.py  main.py  query.py
src/mcp/: __init__.py  gmail_client.py  server.py  stdio_transport.py  types.py
src/processing/: __init__.py  analyzer.py  prompts.py  types.py
src/storage/: __init__.py  db.py  models.py  vector_store.py
tests/: conftest.py  test_launcher.py
tests/test_agent/: test_watcher.py
tests/test_briefing/: test_briefing_generator.py  test_briefing_scheduler.py  test_output_config.py
tests/test_cli/: test_commands.py  test_query_engine.py
tests/test_mcp/: test_gmail_client.py  test_server.py
tests/test_processing/: test_analyzer.py  test_types.py
tests/test_storage/: test_db.py  test_vector_store.py
